更新跑步數據 02/22 + 比賽日期修正 + 暖身課表
- 新增 02/22 恢復跑數據（3.03km, 8:36, HR 139）
- 5K 比賽日期 3/21→3/28, 10K 4月中→4/26
- 訓練計劃新增 R4 高峰週, 減量週順延至 R5
- 新增跑前暖身流程（滾筒+動態拉伸+肌肉啟動+啟動跑）

--- a/2026-02-跑步數據分析.md
+++ b/2026-02-跑步數據分析.md
@@ -3,7 +3,7 @@
 #跑步 #健康 #訓練計劃
 
 **數據來源**：Apple Health
-**分析日期**：2026-02-02
+**分析日期**：2026-02-21
 **Dashboard**：https://pingyen-captain.github.io/running-dashboard/
 
 ---
@@ -12,13 +12,13 @@
 
 | 指標 | 數值 |
 |------|------|
-| 總跑步次數 | 1 次 |
-| 累積里程 | 6.03 km |
-| 總時間 | 43 分鐘 |
-| 平均距離 | 6.03 km |
-| 平均配速 | 7:11 min/km |
+| 總跑步次數 | 5 次 |
+| 累積里程 | 23.37 km |
+| 總時間 | 193 分鐘 |
+| 平均距離 | 4.67 km |
+| 平均配速 | 8:16 min/km |
 | 最佳配速 | 7:11 min/km |
-| 最長距離 | 6.03 km |
+| 最長距離 | 6.11 km |
 
 ---
 
@@ -27,6 +27,10 @@
 | 日期 | 距離 (km) | 時間 | 配速 (min/km) | 平均心率 | 最高心率 | 備註 |
 |------|-----------|------|---------------|----------|----------|------|
 | 02/02 | 6.03 | 43:20 | 7:11 | 161 | 168 | 2 月首跑 |
+| 02/03 | 4.11 | 35:21 | 8:35 | 139 | 146 | 輕鬆跑 |
+| 02/08 | 6.11 | 48:32 | 7:56 | 148 | 157 | Week 1 長跑 |
+| 02/20 | 4.09 | 39:37 | 9:40 | 137 | 156 | 術後恢復首跑（女友拖的） |
+| 02/22 | 3.03 | 26:04 | 8:36 | 139 | 148 | 恢復跑，操場繞圈 |
 
 ---
 
@@ -34,10 +38,10 @@
 
 | 目標項目 | 目前 | 月底目標 | 進度 |
 |----------|------|----------|------|
-| 月跑量 | 6.03 km | 60 km | 10% |
-| 跑步次數 | 1 次 | 15 次 | 7% |
+| 月跑量 | 23.37 km | 60 km | 39%（受術後休息影響） |
+| 跑步次數 | 5 次 | 15 次 | 33% |
 | 最佳配速 | 7:11 | sub 6:30 | 進行中 |
-| 最長距離 | 6.03 km | 8 km | 75% |
+| 最長距離 | 6.11 km | 8 km | 76% |
 
 ---
 
@@ -46,12 +50,28 @@
 | 日期 | 步頻 (spm) | 垂直振幅 (cm) | 觸地時間 (ms) | 步幅 (m) |
 |------|------------|---------------|---------------|----------|
 | 02/02 | 164 | 9.3 | 273 | 0.8 |
+| 02/03 | 162 | 9.8 | 311 | 0.7 |
+| 02/08 | 165 | 9.5 | 290 | 0.7 |
+| 02/20 | 148 | 10.0 | 297 | 0.8 |
+| 02/22 | 153 | 10.1 | 300 | 0.8 |
 
 ### 力學趨勢觀察
-- **步頻 164 spm** - 接近理想範圍 (170-180)
-- **垂直振幅 9.3 cm** - 較低，跑步效率不錯
-- **觸地時間 273 ms** - 中等範圍
-- **步幅 0.8 m** - 維持穩定
+- **步頻 148 spm（02/20）** — 比之前 162-165 低，慢跑配速正常
+- **垂直振幅 9.3-9.8 cm** — 較低，跑步效率不錯
+- **觸地時間 273-311 ms** — 輕鬆跑時偏長(311)，長跑時中等(290)
+- **步幅 0.7-0.8 m** — 維持穩定
+
+---
+
+## 02/08 長跑分析
+
+| 項目 | 計劃 | 實際 | 判定 |
+|------|------|------|------|
+| 距離 | 6 km | 6.11 km | ✓ |
+| 配速 | 8:00-8:30 | 7:56 | ✓ 略快 |
+| 心率 | < 150 | 148 avg | ✓ 壓線過關 |
+
+**分析**：Week 1 長跑品質不錯，心率控制在 Zone 2-3，配速略快於計劃但仍在合理範圍。
 
 ---
 
@@ -80,11 +100,22 @@
 
 ---
 
+## Week 1 總結 (2/3-2/9)
+
+| 項目 | 計劃 | 實際 | 備註 |
+|------|------|------|------|
+| 週跑量 | 26 km | ~16 km | 缺 2 天（沒空+下雨） |
+| 訓練次數 | 6 次 | 3 次 | 含 2/2 賽前跑 |
+| 長跑 | 6 km | 6.11 km ✓ | 達標 |
+| 心率控制 | — | 良好 | 02/03 和 02/08 都在目標內 |
+
+---
+
 ## 下一步目標
 
-- [ ] 嘗試控制心率在 Zone 3，觀察配速變化
-- [ ] 維持每週 3-4 次跑步頻率
-- [ ] 挑戰 7 km 長跑
+- [ ] Week 2 開始 (2/10)，恢復正常訓練頻率
+- [ ] 2/11 首次間歇訓練 400m x 6
+- [ ] 挑戰 7 km 長跑 (2/15)
 - [ ] 配速穩定在 7 分內
 
 ---
@@ -93,8 +124,8 @@
 
 | 比賽 | 日期 | 倒數 | 目標 |
 |------|------|------|------|
-| 5K 馬拉松 | 03/21 | 47 天 | sub-32 分 (配速 6:15-6:20) |
-| 10K 馬拉松 | 04 月中 | ~75 天 | 70-75 分 (配速 7:00-7:30) |
+| 5K 馬拉松 | 03/21 | 41 天 | sub-32 分 (配速 6:15-6:20) |
+| 10K 馬拉松 | 04 月中 | ~66 天 | 70-75 分 (配速 7:00-7:30) |
 
 ---
 
@@ -106,4 +137,4 @@
 
 ---
 
-*最後更新：2026-02-02*
+*最後更新：2026-02-22*
