--- a/跑步日誌.md
+++ b/跑步日誌.md
@@ -8,6 +8,76 @@
 
 ## 2026 年 2 月
 
+### 02/22 (六) 恢復跑
+
+| 項目 | 數據 |
+|------|------|
+| 距離 | 3.03 km |
+| 時間 | 26:04 |
+| 配速 | 8:36 min/km |
+| 平均心率 | 139 bpm |
+| 心率範圍 | 116-148 bpm |
+| 平均功率 | 177 W |
+| 功率範圍 | 83-262 W |
+| 平均步頻 | 153 spm |
+
+**跑步力學數據**
+- 垂直振幅：10.1 cm (9.4-11.0)
+- 觸地時間：300 ms (249-345)
+- 步幅長度：0.8 m (0.7-1.0)
+
+**感受**：術後恢復第 2 跑，操場繞圈。心率控制在 Zone 2 很好，配速 8:36 輕鬆跑節奏。
+
+---
+
+### 02/08 (日) Week 1 長跑
+
+| 項目 | 數據 |
+|------|------|
+| 距離 | 6.11 km |
+| 時間 | 48:32 |
+| 配速 | 7:56 min/km |
+| 平均心率 | 148 bpm |
+| 心率範圍 | 129-157 bpm |
+| 平均功率 | 190 W |
+| 功率範圍 | 84-252 W |
+| 平均步頻 | 165 spm |
+
+**跑步力學數據**
+- 垂直振幅：9.5 cm (8.8-10.3)
+- 觸地時間：290 ms (236-349)
+- 步幅長度：0.7 m (0.7-0.9)
+
+**vs 計劃**：距離 6km ✓ / 配速 8:00-8:30（實際 7:56，略快）✓ / 心率 < 150（實際 148）✓
+
+**感受**：Week 1 長跑達標。心率控制得不錯，壓在 Zone 3 以下。這週因沒空 + 下雨缺了 2 天，但長跑品質 OK。
+
+**下次目標**：明天 2/9 看狀況決定要不要跑 3km 恢復跑，下週 2/10 開始 Week 2
+
+---
+
+### 02/03 (二) Week 1 輕鬆跑
+
+| 項目 | 數據 |
+|------|------|
+| 距離 | 4.11 km |
+| 時間 | 35:21 |
+| 配速 | 8:35 min/km |
+| 平均心率 | 139 bpm |
+| 最高心率 | 146 bpm |
+| 平均步頻 | 162 spm |
+
+**跑步力學數據**
+- 垂直振幅：9.8 cm
+- 觸地時間：311 ms
+- 步幅長度：0.7 m
+
+**vs 計劃**：距離 4km ✓ / 配速 8:30-9:00（實際 8:35）✓ / 心率 < 140（實際 139）✓
+
+**感受**：完美的輕鬆跑，心率壓在 Zone 2，配速也在計劃範圍內。
+
+---
+
 ### 02/02 (一) ⭐ 2 月首跑
 
 | 項目 | 數據 |
