補加 2月數據分析

--- a/2026-02-03-訓練計劃.md
+++ b/2026-02-03-訓練計劃.md
@@ -5,44 +5,52 @@
 **目標賽事**
 | 賽事 | 日期 | 目標成績 | 目標配速 |
 |------|------|----------|----------|
-| 5K 馬拉松 | 3/21 | sub-32（31:xx） | 6:15-6:20 |
+| 5K 馬拉松 | 3/21（六） | ~~sub-32~~ → **sub-33**（32:xx） | 6:30-6:40 |
 | 10K 馬拉松 | 4 月中 | 70-75 分鐘 | 7:00-7:30 |
+
+> **2/21 修正**：因 2/10 手術休息 12 天，目標從 sub-32 調整為 sub-33。
+> 如果恢復狀況好，比賽時仍可挑戰 sub-32。
 
 **起點數據（2026-01-28）**
 - 5K PB：35:10（配速 6:52）
 - 最長距離：5.12 km
 - 月跑量：49+ km
 
----
-
-## 訓練週期總覽
-
-| 週次 | 日期 | 階段 | 重點 |
-|------|------|------|------|
-| Week 1 | 2/3-2/9 | 基礎期 | 恢復 + 建立跑量 |
-| Week 2 | 2/10-2/16 | 基礎期 | 有氧基礎 |
-| Week 3 | 2/17-2/23 | 發展期 | 加入速度訓練 |
-| Week 4 | 2/24-3/2 | 發展期 | 強化乳酸閾值 |
-| Week 5 | 3/3-3/9 | 強化期 | 比賽配速訓練 |
-| Week 6 | 3/10-3/16 | 強化期 | 最後一次長間歇 |
-| Week 7 | 3/17-3/21 | 減量週 | 賽前調整 |
-| — | **3/21** | **5K 比賽** | 目標 sub-32 |
-| Week 8 | 3/22-3/30 | 恢復+耐力 | 增加長跑距離 |
-| Week 9-10 | 4/1-4/中 | 耐力期 | 10K 備戰 |
+**術後現況（2026-02-21）**
+- 2/10 手術（息肉切除），停練 12 天
+- 2/20 恢復首跑：4.09 km，配速 9:40，心率 137（Zone 2）
+- 身體狀態：可以跑，無不適
+- 距離比賽：**28 天（4 週）**
 
 ---
 
-## 每週訓練結構
+## 訓練週期總覽（2/21 修正版）
+
+| 週次 | 日期 | 階段 | 重點 | 週跑量 |
+|------|------|------|------|--------|
+| ~~Week 1~~ | ~~2/3-2/9~~ | ~~基礎期~~ | 已完成（16 km） | 16 km |
+| ~~Week 2-3~~ | ~~2/10-2/23~~ | ~~❌ 手術休息~~ | 停練 12 天，2/20 恢復首跑 | 4 km |
+| **R1** | **2/21-2/27** | **恢復週** | 重建跑感，全 Zone 2 | 18-20 km |
+| **R2** | **2/28-3/6** | **重建週** | 加入速度刺激，恢復節奏 | 25-28 km |
+| **R3** | **3/7-3/13** | **強化週** | 比賽配速訓練，最後硬練 | 28-30 km |
+| **R4** | **3/14-3/21** | **減量週** | 保持手感，儲備能量 | 15 km |
+| — | **3/21** | **5K 比賽** | **目標 sub-33** | — |
+| Week 8 | 3/22-3/30 | 恢復+耐力 | 增加長跑距離 | 25 km |
+| Week 9-10 | 4/1-4/中 | 耐力期 | 10K 備戰 | 32 km |
+
+---
+
+## 每週訓練結構（修正版）
 
 | 星期 | 類型 | 說明 |
 |------|------|------|
-| 一 | 輕鬆跑 | Zone 2，恢復日 |
-| 二 | 間歇訓練 | 速度刺激 |
-| 三 | 輕鬆跑 | Zone 2 |
-| 四 | 節奏跑 | 乳酸閾值訓練 |
-| 五 | 休息 | 完全休息或交叉訓練 |
-| 六 | 長跑 | 耐力建設 |
-| 日 | 輕鬆跑（可選） | 看身體狀況 |
+| 六 | 輕鬆跑 | Zone 2，恢復日 |
+| 日 | 長跑 | 耐力建設 |
+| 一 | 休息 | 完全休息或交叉訓練 |
+| 二 | 輕鬆跑 | Zone 2 |
+| 三 | 間歇/速度 | 速度刺激 |
+| 四 | 輕鬆跑 | Zone 2 |
+| 五 | 節奏跑/間歇 | 乳酸閾值訓練 |
 
 ---
 
@@ -64,127 +72,133 @@
 
 ---
 
-## Week 2：基礎期（2/10-2/16）
+## ❌ Week 2-3（2/10-2/23）：手術休息
 
-> 目標：鞏固有氧基礎，開始輕度速度刺激
-
-| 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 心率目標 |
-|------|------|------|------|----------|----------|
-| 2/10 | 二 | 輕鬆跑 | 5 km | 8:00-8:30 | < 145 |
-| 2/11 | 三 | 間歇訓練 | 5 km | 400m x 6，休 90 秒 | 165-175 |
-| 2/12 | 四 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-| 2/13 | 五 | 節奏跑 | 5 km | 中間 3km @ 7:15 | 155-165 |
-| 2/14 | 六 | 休息 | — | — | — |
-| 2/15 | 日 | 長跑 | 7 km | 8:00-8:30 | < 150 |
-| 2/16 | 一 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-
-**週跑量**：30 km
+> 2/10 息肉切除手術，停練 12 天。2/20 恢復首跑 4.09 km（配速 9:40，HR 137）。
 
 ---
 
-## Week 3：發展期（2/17-2/23）
+## R1：恢復週（2/21-2/27）
 
-> 目標：提升速度耐力，長跑突破 8 km
+> 目標：重建跑感，全部 Zone 2，不追速度。傷口完全無不適才加量。
 
 | 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 心率目標 |
 |------|------|------|------|----------|----------|
-| 2/17 | 二 | 輕鬆跑 | 5 km | 8:00 | < 145 |
-| 2/18 | 三 | 間歇訓練 | 6 km | 600m x 5，休 2 分 | 170-180 |
-| 2/19 | 四 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-| 2/20 | 五 | 節奏跑 | 6 km | 中間 4km @ 7:00 | 155-165 |
-| 2/21 | 六 | 休息 | — | — | — |
-| 2/22 | 日 | 長跑 | 8 km | 7:45-8:00 | < 155 |
-| 2/23 | 一 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 2/21 | 六 | 休息 | — | 昨晚已跑 4km | — |
+| 2/22 | 日 | 輕鬆跑 | 3 km | 9:00-9:30 | < 140 |
+| 2/23 | 一 | 輕鬆跑 | 4 km | 8:30-9:00 | < 140 |
+| 2/24 | 二 | 休息 | — | — | — |
+| 2/25 | 三 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 2/26 | 四 | 輕鬆跑 | 5 km | 8:15-8:30 | < 145 |
+| 2/27 | 五 | 休息 | — | — | — |
 
-**週跑量**：33 km
+**週跑量**：16 km（含 2/20 的 4 km = 20 km）
+
+**本週重點：**
+- 隔天跑、隔天休，不要連續跑
+- 全部 Zone 2（心率 < 140）
+- 如果傷口有任何不適，立刻停
+- 跑完拉伸 10 分鐘
 
 ---
 
-## Week 4：發展期（2/24-3/2）
+## R2：重建週（2/28-3/6）
 
-> 目標：強化乳酸閾值，長跑達 9 km
-
-| 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 心率目標 |
-|------|------|------|------|----------|----------|
-| 2/24 | 二 | 輕鬆跑 | 5 km | 8:00 | < 145 |
-| 2/25 | 三 | 間歇訓練 | 6 km | 800m x 4，休 2 分 | 170-180 |
-| 2/26 | 四 | 輕鬆跑 | 5 km | 8:00 | < 145 |
-| 2/27 | 五 | 節奏跑 | 6 km | 中間 4km @ 6:45 | 160-170 |
-| 2/28 | 六 | 休息 | — | — | — |
-| 3/1 | 日 | 長跑 | 9 km | 7:30-7:45 | < 155 |
-| 3/2 | 一 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-
-**週跑量**：35 km
-
----
-
-## Week 5：強化期（3/3-3/9）
-
-> 目標：比賽配速適應，跑量維持
+> 目標：恢復正常跑量，加入第一次速度刺激。這週決定 sub-33 有沒有戲。
 
 | 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 心率目標 |
 |------|------|------|------|----------|----------|
-| 3/3 | 二 | 輕鬆跑 | 5 km | 8:00 | < 145 |
-| 3/4 | 三 | 比賽配速跑 | 6 km | 1km 熱身 + 4km @ 6:20 + 1km 緩和 | 160-170 |
+| 2/28 | 六 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 3/1 | 日 | 長跑 | 6 km | 8:00-8:15 | < 150 |
+| 3/2 | 一 | 休息 | — | — | — |
+| 3/3 | 二 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 3/4 | 三 | **間歇訓練** | 5 km | 熱身 1km + **400m x 5（休 90 秒）** + 緩和 1km | 160-170 |
 | 3/5 | 四 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-| 3/6 | 五 | 間歇訓練 | 5 km | 1000m x 3，休 3 分 | 170-180 |
-| 3/7 | 六 | 休息 | — | — | — |
-| 3/8 | 日 | 長跑 | 10 km | 7:30-7:45 | < 155 |
-| 3/9 | 一 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 3/6 | 五 | **節奏跑** | 5 km | 熱身 1km + **3km @ 7:15** + 緩和 1km | 150-160 |
 
-**週跑量**：34 km | **里程碑**：首次 10K 長跑！
+**週跑量**：28 km
+
+**本週重點：**
+- 3/4 間歇是術後第一次速度訓練，400m 目標跑 1:50-2:00（配速 ~4:45-5:00/km）
+- 如果間歇跑完覺得輕鬆 → sub-33 有戲
+- 如果覺得很吃力 → 比賽目標改 sub-34
+- 3/6 節奏跑測試乳酸閾值回來了沒有
 
 ---
 
-## Week 6：強化期（3/10-3/16）
+## R3：強化週（3/7-3/13）
 
-> 目標：最後一次高強度，為減量做準備
+> 目標：比賽配速適應，最後一次高強度。這週練完就開始減量。
 
 | 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 心率目標 |
 |------|------|------|------|----------|----------|
-| 3/10 | 二 | 輕鬆跑 | 5 km | 8:00 | < 145 |
-| 3/11 | 三 | 間歇訓練 | 5 km | 800m x 5，休 2 分 | 170-180 |
+| 3/7 | 六 | 輕鬆跑 | 4 km | 8:30 | < 140 |
+| 3/8 | 日 | **長跑** | 7 km | 7:45-8:00 | < 155 |
+| 3/9 | 一 | 休息 | — | — | — |
+| 3/10 | 二 | 輕鬆跑 | 4 km | 8:00 | < 145 |
+| 3/11 | 三 | **比賽配速跑** | 5 km | 熱身 1km + **3km @ 6:30-6:40** + 緩和 1km | 155-165 |
 | 3/12 | 四 | 輕鬆跑 | 4 km | 8:30 | < 140 |
-| 3/13 | 五 | 比賽配速跑 | 5 km | 全程 @ 6:15-6:20 | 160-170 |
-| 3/14 | 六 | 休息 | — | — | — |
-| 3/15 | 日 | 長跑 | 8 km | 7:45 | < 150 |
-| 3/16 | 一 | 輕鬆跑 | 3 km | 9:00 | < 135 |
+| 3/13 | 五 | **間歇訓練** | 5 km | 熱身 1km + **800m x 3（休 2 分）** + 緩和 1km | 165-175 |
 
-**週跑量**：30 km
+**週跑量**：29 km
+
+**本週重點：**
+- 3/11 比賽配速跑是關鍵測試 — 3km 用 6:30-6:40 跑，體感判斷比賽日能衝多快
+- 3/13 是賽前最後一次高強度間歇，跑完就開始養
+- 800m 間歇目標：3:15-3:20（配速 ~4:05-4:10/km）
+- 這週之後不再加量
 
 ---
 
-## Week 7：減量週（3/17-3/21）
+## R4：減量週（3/14-3/21）
 
-> 目標：保持狀態，儲備能量，比賽日全力發揮
+> 目標：保持手感，儲備能量，比賽日全力輸出。
 
 | 日期 | 星期 | 訓練 | 距離 | 配速/內容 | 備註 |
 |------|------|------|------|----------|------|
-| 3/17 | 二 | 輕鬆跑 | 4 km | 8:00 | |
-| 3/18 | 三 | 短間歇 | 3 km | 200m x 4，輕快跑 | 喚醒腿部 |
-| 3/19 | 四 | 輕鬆跑 | 3 km | 8:30 | |
-| 3/20 | 五 | 休息 | — | — | 賽前休息 |
-| **3/21** | **六** | **5K 比賽** | **5 km** | **目標 6:15-6:20** | **sub-32！** |
+| 3/14 | 六 | 休息 | — | — | 大休 |
+| 3/15 | 日 | 輕鬆跑 | 4 km | 8:00 | 維持腿感 |
+| 3/16 | 一 | 休息 | — | — | |
+| 3/17 | 二 | 輕鬆跑 | 3 km | 8:00 | |
+| 3/18 | 三 | **短刺激** | 3 km | 熱身 1km + **200m x 4（輕快跑）** + 緩和 | 喚醒腿部 |
+| 3/19 | 四 | 輕鬆跑 | 2 km | 8:30 | 超輕鬆，動一下就好 |
+| 3/20 | 五 | **完全休息** | — | — | 賽前休息 |
+| **3/21** | **六** | **🏃 5K 比賽** | **5 km** | **目標 6:30-6:40** | **sub-33！** |
 
-**週跑量**：15 km（減量 50%）
+**週跑量**：12 km + 比賽 5 km
 
 ---
 
-## 5K 比賽策略（3/21）
+## 5K 比賽策略（3/21）— 修正版
+
+### 目標：sub-33（32:30-32:59）
+
+> 保守策略。如果 R2-R3 恢復得很好，可以往 sub-32 衝。
 
 **配速計劃**
 | 公里 | 目標配速 | 累計時間 | 策略 |
 |------|----------|----------|------|
-| 1 | 6:25 | 6:25 | 保守開跑，找節奏 |
-| 2 | 6:20 | 12:45 | 穩定配速 |
-| 3 | 6:15 | 19:00 | 維持，注意呼吸 |
-| 4 | 6:15 | 25:15 | 開始加速準備 |
-| 5 | 6:05 | **31:20** | 最後衝刺！ |
+| 1 | 6:45 | 6:45 | 保守開跑，找節奏，不要被帶快 |
+| 2 | 6:35 | 13:20 | 穩定，確認呼吸節奏 |
+| 3 | 6:30 | 19:50 | 維持，這裡是最苦的 |
+| 4 | 6:25 | 26:15 | 開始微加速 |
+| 5 | 6:15 | **32:30** | 最後 500m 全力衝！ |
+
+### 如果狀態超好（R3 測試跑 3km @ 6:30 很輕鬆）
+
+| 公里 | 目標配速 | 累計時間 | 策略 |
+|------|----------|----------|------|
+| 1 | 6:30 | 6:30 | |
+| 2 | 6:20 | 12:50 | |
+| 3 | 6:15 | 19:05 | |
+| 4 | 6:15 | 25:20 | |
+| 5 | 6:00 | **31:20** | sub-32！ |
 
 **賽前提醒**
-- [ ] 賽前 3 天減少纖維攝取
-- [ ] 賽前 2 小時吃完早餐（碳水為主）
-- [ ] 賽前 30 分鐘熱身 10 分鐘慢跑 + 動態伸展
+- [ ] 賽前 3 天減少纖維攝取、多吃碳水
+- [ ] 賽前 2 小時吃完早餐（碳水為主：吐司、香蕉）
+- [ ] 賽前 30 分鐘：慢跑 10 分鐘 + 動態伸展 + 2-3 趟 100m 漸速跑
+- [ ] 不要穿新鞋、新衣服
 - [ ] 帶能量膠備用（以防萬一）
 
 ---
