修正 2月分析：比賽日期+下一步目標

--- a/2026-02-跑步數據分析.md
+++ b/2026-02-跑步數據分析.md
@@ -3,7 +3,7 @@
 #跑步 #健康 #訓練計劃
 
 **數據來源**：Apple Health
-**分析日期**：2026-02-21
+**分析日期**：2026-02-22
 **Dashboard**：https://pingyen-captain.github.io/running-dashboard/
 
 ---
@@ -113,9 +113,10 @@
 
 ## 下一步目標
 
-- [ ] Week 2 開始 (2/10)，恢復正常訓練頻率
-- [ ] 2/11 首次間歇訓練 400m x 6
-- [ ] 挑戰 7 km 長跑 (2/15)
+- [ ] R1 恢復週完成（2/25、2/26 輕鬆跑）
+- [ ] R2 重建週：3/1 長跑 6km、3/4 首次間歇 400m x 5
+- [ ] 挑戰 7 km 長跑（R3 3/8）
+- [ ] 挑戰 8 km 長跑（R4 3/15）
 - [ ] 配速穩定在 7 分內
 
 ---
@@ -124,8 +125,8 @@
 
 | 比賽 | 日期 | 倒數 | 目標 |
 |------|------|------|------|
-| 5K 馬拉松 | 03/21 | 41 天 | sub-32 分 (配速 6:15-6:20) |
-| 10K 馬拉松 | 04 月中 | ~66 天 | 70-75 分 (配速 7:00-7:30) |
+| 5K 馬拉松 | 03/28 | 34 天 | sub-33 分 (配速 6:30-6:40) |
+| 10K 馬拉松 | 04/26 | 63 天 | 70-75 分 (配速 7:00-7:30) |
 
 ---
 
