更新跑步數據 02/25 + 補齊 02/22-02/23 進度
- 新增 02/25 恢復跑：4.05km / 35:40 / 8:48 / HR 141
- 修正 2月進度：31.50km (53%) — 之前卡在 23.37km
- 總跑步次數 21→22，累積里程 82.78→86.83km

--- a/跑步日誌.md
+++ b/跑步日誌.md
@@ -8,6 +8,28 @@
 
 ## 2026 年 2 月
 
+### 02/25 (三) 恢復跑
+
+| 項目 | 數據 |
+|------|------|
+| 距離 | 4.05 km |
+| 時間 | 35:40 |
+| 配速 | 8:48 min/km |
+| 平均心率 | 141 bpm |
+| 心率範圍 | 134-154 bpm |
+| 平均功率 | 171 W |
+| 功率範圍 | 148-205 W |
+| 平均步頻 | 159 spm |
+
+**跑步力學數據**
+- 垂直振幅：9.9 cm (9.4-10.5)
+- 觸地時間：309 ms (257-345)
+- 步幅長度：0.7 m (0.7-0.8)
+
+**感受**：恢復跑第 4 天，距離和配速跟 02/23 幾乎一樣。心率 141 穩定在 Zone 2，功率 171W 也一致，狀態持續穩定。
+
+---
+
 ### 02/23 (一) 恢復跑
 
 | 項目 | 數據 |
