--- a/2026-02-跑步數據分析.md
+++ b/2026-02-跑步數據分析.md
@@ -3,7 +3,7 @@
 #跑步 #健康 #訓練計劃
 
 **數據來源**：Apple Health
-**分析日期**：2026-02-23
+**分析日期**：2026-02-25
 **Dashboard**：https://pingyen-captain.github.io/running-dashboard/
 
 ---
@@ -12,11 +12,11 @@
 
 | 指標 | 數值 |
 |------|------|
-| 總跑步次數 | 6 次 |
-| 累積里程 | 27.45 km |
-| 總時間 | 229 分鐘 |
-| 平均距離 | 4.58 km |
-| 平均配速 | 8:21 min/km |
+| 總跑步次數 | 7 次 |
+| 累積里程 | 31.50 km |
+| 總時間 | 265 分鐘 |
+| 平均距離 | 4.50 km |
+| 平均配速 | 8:24 min/km |
 | 最佳配速 | 7:11 min/km |
 | 最長距離 | 6.11 km |
 
@@ -32,6 +32,7 @@
 | 02/20 | 4.09 | 39:37 | 9:40 | 137 | 156 | 術後恢復首跑（女友拖的） |
 | 02/22 | 3.03 | 26:04 | 8:36 | 139 | 148 | 恢復跑，操場繞圈 |
 | 02/23 | 4.08 | 36:08 | 8:51 | 139 | 151 | 恢復跑，建國國中操場 |
+| 02/25 | 4.05 | 35:40 | 8:48 | 141 | 154 | 恢復跑 |
 
 ---
 
@@ -39,8 +40,8 @@
 
 | 目標項目 | 目前 | 月底目標 | 進度 |
 |----------|------|----------|------|
-| 月跑量 | 27.45 km | 60 km | 46%（受術後休息影響） |
-| 跑步次數 | 6 次 | 15 次 | 40% |
+| 月跑量 | 31.50 km | 60 km | 53%（受術後休息影響） |
+| 跑步次數 | 7 次 | 15 次 | 47% |
 | 最佳配速 | 7:11 | sub 6:30 | 進行中 |
 | 最長距離 | 6.11 km | 8 km | 76% |
 
@@ -56,6 +57,7 @@
 | 02/20 | 148 | 10.0 | 297 | 0.8 |
 | 02/22 | 153 | 10.1 | 300 | 0.8 |
 | 02/23 | 160 | 10.0 | 316 | 0.7 |
+| 02/25 | 159 | 9.9 | 309 | 0.7 |
 
 ### 力學趨勢觀察
 - **步頻 148 spm（02/20）** — 比之前 162-165 低，慢跑配速正常
@@ -140,4 +142,4 @@
 
 ---
 
-*最後更新：2026-02-23*
+*最後更新：2026-02-25*
